src/styles/workEntry.css
.workEntry {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-bottom: 13em;
}

.workEntry:nth-child(odd) {
  flex-direction: row-reverse;
}

.workEntryTextPanel {
  flex: 1;
}

.workEntryImageContainer {
  flex: 1;
}

.workEntry:nth-child(odd) .workEntryTextPanel {
  padding-left: 4em;
}

.workEntry:nth-child(even) .workEntryTextPanel {
  padding-right: 4em;
}

.workEntryTitle {
  font-size: 2.5em;
  font-family: 'Roboto-Bold';
}

.workEntrySubtitle {
  margin-top: 0.5em;
  font-size: 1em;
  font-family: 'Roboto-Medium';
  color: #333;
}

.badges {
  margin-top: 1em;
}

.workEntryDescription {
  margin-top: 2.5em;
  font-size: 1em;
  font-family: 'Roboto-Regular';
  line-height: 2em;
}

.workEntryDescriptionParagraph {
  color: #333;
}

.workEntryLink {
  color: blue;
}

.workEntryImage {
  width: 100%;
  height: auto;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

@media only screen and (max-width: 768px) {
  .workEntry {
    flex-direction: column-reverse !important;
  }
  .workEntryTextPanel {
    padding: 0 !important;
  }
}

